--- a/Atividade 01.ipynb
+++ b/Atividade 01.ipynb
@@ -38,7 +38,10 @@
    "source": [
     "oi = \"oi\"\n",
     "oi",
-    "oi"
+    "oi",
+    "oi\n",
+    "tchau = \"tchau\"\n",
+    "tchau"
    ]
   },
   {
