atividade03 - frete ajustado

--- a/Atividade 03.ipynb
+++ b/Atividade 03.ipynb
@@ -350,10 +350,13 @@
     "### 6.1 Query:\n",
     "\n",
     "```sql\n",
+    "\n",
     "{{ config(materialized='view') }}\n",
     "\n",
-    "SELECT\n",
+    "SELECT DISTINCT\n",
     "    A.order_id,\n",
+    "    B.total_price,\n",
+    "    B.total_freight,\n",
     "    B.total_cost\n",
     "FROM \n",
     "    `dbt_shop.orders` AS A\n",
@@ -361,7 +364,9 @@
     "  (\n",
     "    SELECT \n",
     "      order_id,\n",
-    "      SUM(price + freight_value) AS total_cost\n",
+    "      SUM(price) as total_price,\n",
+    "      MIN(freight_value) as total_freight,\n",
+    "      SUM(price) + MIN(freight_value) AS total_cost\n",
     "    FROM\n",
     "      `dbt_shop.items`\n",
     "    GROUP BY  \n",
@@ -395,7 +400,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "0dbfd855",
+   "id": "50fbc2ce",
    "metadata": {},
    "source": [
     "### 6.4 No GCP:\n",
